fixed compose and swagger
